--- a/src/ListenTogether/Resources/Styles/Styles.xaml
+++ b/src/ListenTogether/Resources/Styles/Styles.xaml
@@ -173,7 +173,10 @@
             Value="{AppThemeBinding Light={StaticResource LightTitle}, Dark={StaticResource DarkTitle}}" />
         <Setter
             Property="FontSize"
-            Value="18"/>
+            Value="16"/>
+        <Setter
+            Property="FontAttributes"
+            Value="None"/>
         <Setter Property="VisualStateManager.VisualStateGroups">
             <VisualStateGroupList>
                 <VisualStateGroup x:Name="CommonStates">
