搜索页加入播放全部按钮

--- a/src/ListenTogether/App.xaml
+++ b/src/ListenTogether/App.xaml
@@ -16,6 +16,7 @@
             <mct:ByteArrayToImageSourceConverter x:Key="ByteArrayToImageSourceConverter" />
             <mct:IsStringNullOrWhiteSpaceConverter x:Key="IsStringNullOrWhiteSpaceConverter" />
             <mct:IsStringNotNullOrWhiteSpaceConverter x:Key="IsStringNotNullOrWhiteSpaceConverter" />
+            <mct:IsListNotNullOrEmptyConverter x:Key="IsListNotNullOrEmptyConverter" />
             <mct:EnumToIntConverter x:Key="EnumToIntConverter" />
             <mct:EventToCommandBehavior x:Key="EventToCommandBehavior" />
         </ResourceDictionary>
