--- a/src/ListenTogether/Pages/SearchResultPage.xaml
+++ b/src/ListenTogether/Pages/SearchResultPage.xaml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:hc="clr-namespace:ListenTogether.HandCursorControls"
              xmlns:viewmodels="clr-namespace:ListenTogether.ViewModels"
              xmlns:controls="clr-namespace:ListenTogether.Controls"
              xmlns:mct="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
@@ -14,11 +15,11 @@
         </Grid.RowDefinitions>
 
         <StackLayout 
-            Grid.Row="0" 
+            Grid.Row="0"
+            Spacing="10"
             Margin="{OnPlatform WinUI=16,MacCatalyst=16,Android='10,5,10,5',iOS='10,5,10,5'}"
             Style="{StaticResource StackLayoutLoading}">
-            <StackLayout 
-                Margin="{OnPlatform WinUI='0,0,0,20',MacCatalyst='0,0,0,20',Android='0,0,0,10',iOS='0,0,0,10'}"
+            <StackLayout
                 Orientation="Horizontal"
                 VerticalOptions="Start">
                 <Label Text="搜索"
@@ -31,6 +32,27 @@
                 VerticalOptions="Start"
                 Focused="TxtSearchBar_Focused">
             </SearchBar>
+
+            <hc:HandCursorStackLayout
+                Orientation="Horizontal"
+                HorizontalOptions="Start"
+                VerticalOptions="Center"
+                Spacing="5"
+                IsVisible="{Binding SearchResult, Converter={StaticResource IsListNotNullOrEmptyConverter}}">
+                <hc:HandCursorStackLayout.GestureRecognizers>
+                    <TapGestureRecognizer
+                        Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodels:SearchResultPageViewModel}}, Path=PlayAllAsyncCommand}"/>
+                </hc:HandCursorStackLayout.GestureRecognizers>
+                <Image
+                    WidthRequest="20"
+                    HeightRequest="20"
+                    VerticalOptions="CenterAndExpand"
+                    Source="{AppThemeBinding Dark='play_dark.png',Light='play.png'}"/>
+                <Label
+                    Text="播放全部"
+                    FontAttributes="Bold"
+                    VerticalTextAlignment="Center"/>
+            </hc:HandCursorStackLayout>
 
             <controls:MusicResultView
                 Musics="{Binding SearchResult}"
