--- a/src/ListenTogether/Controls/Loading.xaml
+++ b/src/ListenTogether/Controls/Loading.xaml
@@ -2,22 +2,24 @@
                xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
                x:Class="ListenTogether.Controls.LoadingPage"
-               CanBeDismissedByTappingOutsideOfPopup="False"
-               Size="300,150">
+               CanBeDismissedByTappingOutsideOfPopup="False">
 
     <Grid
-        RowDefinitions="Auto,Auto"
+        RowDefinitions="*,*"
         BackgroundColor="{AppThemeBinding Dark={StaticResource DarkBackground},Light={StaticResource LightBackground}}"
+        Opacity="0.5"
         RowSpacing="10"
         Padding="20">
         <ActivityIndicator
             Grid.Row="0"
             Color="{StaticResource Main}"
+            VerticalOptions="EndAndExpand"
             IsRunning="True"/>
         <Label
             Grid.Row="1"
             x:Name="LblMessage"
             HorizontalOptions="CenterAndExpand"
+            VerticalOptions="StartAndExpand"
             TextColor="{StaticResource Main}"/>
     </Grid>
 </toolkit:Popup>
