新增定时关闭功能

--- a/src/ListenTogether/Pages/SettingsPage.xaml
+++ b/src/ListenTogether/Pages/SettingsPage.xaml
@@ -253,6 +253,10 @@
                                 Margin="0,5,0,0"
                                 Command="{Binding GoToCacheCleanAsyncCommand}"/>
                             <hc:HandCursorButton
+                                Text="定时关闭"
+                                Margin="0,5,0,0"
+                                Command="{Binding GoToAutoCloseAsyncCommand}"/>
+                            <hc:HandCursorButton
                                 Text="退出账号"
                                 Margin="0,5,0,0"
                                 IsVisible="{Binding UserInfo, Converter={StaticResource IsNotEqualConverter}}"
