删除不使用的文件

--- a/src/ListenTogether.Pages/Components/Discover/Discover.razor
+++ b/src/ListenTogether.Pages/Components/Discover/Discover.razor
@@ -26,12 +26,12 @@
                     <MudItem lg="2" xs="4" md="3" Class="d-flex justify-center">
                         <div class="song-menu-item" onclick=@(()=>GotoSongMenuPage( songMenu.Id, songMenu.Name,songMenu.ImageUrl))>
                             <MudImage Src="@songMenu.ImageUrl"
-                                      ObjectFit="ObjectFit.Cover"
-                                      Elevation="25"
-                                      Width="140"
-                                      Height="140"
-                                      Alt="@songMenu.Name"
-                                      Class="rounded-lg" />
+                              ObjectFit="ObjectFit.Cover"
+                              Elevation="25"
+                              Width="140"
+                              Height="140"
+                              Alt="@songMenu.Name"
+                              Class="rounded-lg mb-2" />
                             <div>@songMenu.Name</div>
                         </div>
                     </MudItem>
