--- a/src/ListenTogether.Pages/Components/SearchLabel.razor
+++ b/src/ListenTogether.Pages/Components/SearchLabel.razor
@@ -1,7 +1,9 @@
 ﻿@inject NavigationManager NavigationManager
 
 <MudChip Icon="@Icons.Material.Filled.Search"
+         Class="cursor-text"
          IconColor="Color.Primary"
+         OnClick="GotoSearchPage"
          Style="width: 100%; display: flex; justify-content: left; padding-left: 15px;">
     想找点什么呢？
 </MudChip>
