--- a/src/ListenTogether.Pages/Shared/MainLayout.razor
+++ b/src/ListenTogether.Pages/Shared/MainLayout.razor
@@ -60,7 +60,8 @@
             PaletteDark = new PaletteDark()
             {
                 Primary = "#C98FFF",
-                Background = "#333333"
+                Background = "#333333",
+                Surface = "#333333"
             }
         };
 
