--- a/src/ListenTogetherMauiBlazor/Main.razor
+++ b/src/ListenTogetherMauiBlazor/Main.razor
@@ -7,7 +7,7 @@
     </Found>
     <NotFound>
         @{
-            NavigationManager.NavigateTo("/", false);
+            NavigationManager.NavigateTo("/discover", false);
         }
     </NotFound>
 </Router>
